# guitar-track-to-tabs-converter-

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_project_tables.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  constants.py
backend/app/db/: session.py
backend/app/dsp/: audio_pipeline.py
backend/app/ml/: transcriber.py
backend/app/models/: __init__.py  project.py
backend/app/schemas/: transcription.py
backend/app/services/: exporters.py  fretboard_mapper.py  project_service.py  tab_formatter.py
backend/app/utils/: music.py
backend/app/workers/: queue.py
backend/tests/: conftest.py  test_fretboard_mapper.py  test_project_service.py  test_routes_status.py
docs/: API.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/: PlaybackControls.tsx  TabEditor.tsx  Toast.tsx  UploadPanel.tsx
frontend/src/hooks/: usePlayback.ts
frontend/src/lib/: api.ts
frontend/src/types/: tab.ts
