[project]
name = "guitar-tab-backend"
version = "0.1.0"
description = "Backend for guitar stem to tablature conversion"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "alembic>=1.13.1",
  "redis>=5.0.4",
  "rq>=1.16.2",
  "python-multipart>=0.0.9",
  "librosa>=0.10.2.post1",
  "numpy>=1.26.4",
  "torch>=2.3.0",
  "basic-pitch>=0.3.0",
  "mido>=1.3.2",
  "music21>=9.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.4.8"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["app"]
